@@ -1,16 +1,3 @@
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-    options.warnings = true
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += "--enable-preview"
-    useJUnitPlatform()
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += "--enable-preview"
-}
 tasks.register("clean", Delete.class, () -> {
     delete(rootProject.buildDir)
 })
